--- a/candytrx2.html
+++ b/candytrx2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
+<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
     <!---->
     
     <!---->
@@ -254,7 +254,7 @@ let MyContractFarm = await tronWeb.contract().at(contractAddressFarm);
    var lppoolsupply=poolLPbalance;
    document.getElementById("lptotal").innerHTML=roundToSix(lppoolsupply/1000000);
   var lppoolsupplyusd=poolLPbalance*lpprice;
-    document.getElementById("usdtotal").innerHTML=(lppoolsupplyusd);
+    document.getElementById("usdtotal").innerHTML=roundToSix(lppoolsupplyusd);
   
     let LPmybalance= await MyContractFarm.LPmyBalance().call(); 
     document.getElementById("mylpbalance").innerHTML=roundToSix(LPmybalance/1000000);
@@ -271,7 +271,7 @@ let MyContractFarm = await tronWeb.contract().at(contractAddressFarm);
   var weeklyroipercent=weeklyusdreward/(lppoolsupplyusd/100);
   var APY=weeklyroipercent*75;
   
-  console.log(APY+"  "+weeklyroipercent+"  "+weeklyusdreward+"  "+candyprice+"  "+weeklyreward+"  "+dailyreward);
+  console.log(APY+"  "+weeklyroipercent+"  "+weeklyusdreward+"  "+lppoolsupplyusd+"  "+weeklyreward+"  "+candyprice);
               
   document.getElementById("APY").innerHTML=roundToTwo(APY);
   
