--- a/candytrx2.html
+++ b/candytrx2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
     <!---->
     
     <!---->
@@ -265,7 +265,7 @@ let MyContractFarm = await tronWeb.contract().at(contractAddressFarm);
   document.getElementById("candyweekly").innerHTML=roundToSix(weeklyreward/1000000);
   
   let TokenToTrxInputPrice=await MyContractFarm.TokenToTrxInputPrice(1000000).call(); 
-  var candyprice=TokenToTrxInputPrice/trxprice;
+  var candyprice=TokenToTrxInputPrice/1000000/trxprice;
   var weeklyusdreward=weeklyreward*candyprice;
   
   var weeklyroipercent=weeklyusdreward/(lppoolsupplyusd/100);
