--- a/candytrx2.html
+++ b/candytrx2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
     <!---->
     
     <!---->
@@ -266,7 +266,7 @@ let MyContractFarm = await tronWeb.contract().at(contractAddressFarm);
   
   let TokenToTrxInputPrice=await MyContractFarm.TokenToTrxInputPrice(1000000).call(); 
   var candyprice=TokenToTrxInputPrice/1000000/trxprice;
-  var weeklyusdreward=weeklyreward*candyprice;
+  var weeklyusdreward=weeklyreward/1000000*candyprice;
   
   var weeklyroipercent=weeklyusdreward/(lppoolsupplyusd/100);
   var APY=weeklyroipercent*75;
