--- a/candytrx2.html
+++ b/candytrx2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
     <!---->
     
     <!---->
@@ -265,8 +265,10 @@ let MyContractFarm = await tronWeb.contract().at(contractAddressFarm);
   document.getElementById("candyweekly").innerHTML=roundToSix(weeklyreward/1000000);
   
   let TokenToTrxInputPrice=await MyContractFarm.TokenToTrxInputPrice(1000000).call(); 
-  var candyprice=TokenToTrxInputPrice/1000000/trxprice;
-  var weeklyusdreward=weeklyreward/1000000*candyprice;
+  console.log(TokenToTrxInputPrice);
+  
+  var candyprice=(TokenToTrxInputPrice/1000000)/trxprice;
+  var weeklyusdreward=(weeklyreward/1000000)*candyprice;
   
   var weeklyroipercent=weeklyusdreward/(lppoolsupplyusd/100);
   var APY=weeklyroipercent*75;
