--- a/candytrx2.html
+++ b/candytrx2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
     <!---->
     
     <!---->
@@ -264,7 +264,8 @@ let MyContractFarm = await tronWeb.contract().at(contractAddressFarm);
   var weeklyreward= dailyreward*7;
   document.getElementById("candyweekly").innerHTML=roundToSix(weeklyreward/1000000);
   
-  let TokenToTrxInputPrice=await MyContractFarm.TokenToTrxInputPrice(1000000).call(); 
+  let TokenToTrxInputPrice_=await MyContractFarm.TokenToTrxInputPrice(1000000).call(); 
+  var TokenToTrxInputPrice=window.tronWeb.toDecimal(TokenToTrxInputPrice_);
   console.log(TokenToTrxInputPrice);
   
   var candyprice=(TokenToTrxInputPrice/1000000)/trxprice;
