--- a/candytrx2.html
+++ b/candytrx2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
     <!---->
     
     <!---->
@@ -268,7 +268,7 @@ let MyContractFarm = await tronWeb.contract().at(contractAddressFarm);
   var TokenToTrxInputPrice=window.tronWeb.toDecimal(TokenToTrxInputPrice_);
   console.log(TokenToTrxInputPrice);
   
-  var candyprice=(TokenToTrxInputPrice/1000000)/trxprice;
+  var candyprice=(TokenToTrxInputPrice/1000000)*trxprice;
   var weeklyusdreward=(weeklyreward/1000000)*candyprice;
   
   var weeklyroipercent=weeklyusdreward/(lppoolsupplyusd/100);
