--- a/candytrx2.html
+++ b/candytrx2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
     <!---->
     
     <!---->
@@ -269,7 +269,7 @@ let MyContractFarm = await tronWeb.contract().at(contractAddressFarm);
   console.log(TokenToTrxInputPrice);
   
   var candyprice=(TokenToTrxInputPrice/1000000)*trxprice;
-  var dailylyusdreward=(dailyreward/1000000)*candyprice;
+  var dailyusdreward=(dailyreward/1000000)*candyprice;
   
   var dailyroipercent=dailyusdreward/(lppoolsupplyusd/100);
   var APY=dailyroipercent*365;
