--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="https://justswap.org/?lang=en-US#/scan/detail/trx/TEz1qbbCMKojtuMtweTq2PVSL5Lvk7ZKjE" target="_blank">Candy/Trx</a>
+                    <a class="nav-link link text-secondary display-4" href="https://justswap.org/?lang=en-US#/home?tokenAddress=TEz1qbbCMKojtuMtweTq2PVSL5Lvk7ZKjE&type=swap" target="_blank">Get Candy</a>
                 </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="farms.html">
                         
                         Farm</a></li>
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="services2 cid-sa1wVYp7bK mbr-parallax-background" id="services2-7">
+<section class="engine"><a href="https://mobirise.info/f">simple site builder</a></section><section class="services2 cid-sa1wVYp7bK mbr-parallax-background" id="services2-7">
     <!---->
     
     <!---->
